# fusion-blossom

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  install_environment.sh  pyproject.toml  rust-toolchain.toml  rustfmt.toml  setup.py  test.sh  test_build.sh  test_check.sh  test_python.sh  visualization.py
.github/workflows/: wheels.yml
benchmark/: .gitignore  README.md  m6i_update.sh  util.py
benchmark/paper_distributed_uf_compare/latency_test/: README.md  data_parity.txt  data_pymatching.txt  run_parity.py  run_pymatching.py
benchmark/paper_fusion_circuit_level/: README.md
benchmark/paper_fusion_circuit_level/decoding_latency_T/: data_batch.txt  data_stream.txt  decoding_latency_T.gp  run.py
benchmark/paper_fusion_circuit_level/decoding_latency_T_linear_scale/: data_batch.txt  data_stream.txt  decoding_latency_T_linear_scale.gp  run.py
benchmark/paper_fusion_circuit_level/decoding_latency_subtree_size/: run.py
benchmark/paper_fusion_circuit_level/decoding_throughput_threads64/: data_p0.001.txt  data_p0.002.txt  data_p0.004.txt  decoding_throughput_threads64.gp  run.py
benchmark/paper_fusion_circuit_level/decoding_time_d/: data_blossomV.txt  data_fusion.txt  data_pymatching.txt  decoding_time_d.gp  fit.py  run_blossomV.py  run_fusion.py  run_pymatching.py
benchmark/paper_fusion_circuit_level/emulate_decoding_d21_threads64/: data_deltaT100.txt  data_deltaT20.txt  data_deltaT50.txt  run.py
benchmark/paper_fusion_circuit_level/fusion_time_children_count/: README.md  balance_tree.txt  linear_tree.txt  run_linear_tree.py
benchmark/paper_fusion_circuit_level/fusion_time_d/: data.txt  fusion_time_d.gp  run.py
benchmark/paper_fusion_circuit_level/fusion_time_delta_T/: data.txt  fusion_time_delta_T.gp  run.py
benchmark/paper_fusion_circuit_level/partition_num_single_thread_2_tree/: data.txt  decoding_time_per_defect.gp  run.py
benchmark/paper_fusion_circuit_level/pymatching_compare_various_T/: README.md  data_blossomV.txt  data_fusion.txt  data_parity.txt  data_pymatching.txt  pymatching_compare_various_T.gp  run_blossomV.py  run_fusion.py  run_parity.py  run_pymatching.py
benchmark/paper_fusion_circuit_level/thread_pool_size_partition_1k/: data.txt  run.py
benchmark/paper_fusion_rotated_code/: README.md  paper_settings.gp
benchmark/paper_fusion_rotated_code/decoding_throughput_threads64/: data_p0.005.txt  data_p0.01.txt  data_p0.02.txt  decoding_throughput_threads64.gp  run.py
benchmark/paper_fusion_rotated_code/decoding_time_d/: data_blossomV.txt  data_fusion.txt  data_pymatching.txt  decoding_time_d.gp  fit.py  run_blossomV.py  run_fusion.py  run_pymatching.py
benchmark/paper_fusion_rotated_code/emulate_decoding_d21_threads64/: data_deltaT10.txt  data_deltaT100.txt  data_deltaT20.txt  data_deltaT50.txt  run.py
benchmark/paper_fusion_rotated_code/emulate_real_decoding/: emulate_batch.py  emulate_linear_tree.py
benchmark/paper_fusion_rotated_code/emulate_real_decoding_8_partitions/: emulate_batch.py  emulate_linear_tree.py
benchmark/paper_fusion_rotated_code/fusion_time_children_count/: README.md  balance_tree.py  balance_tree.txt  linear_tree.py  linear_tree.txt
benchmark/paper_fusion_rotated_code/fusion_time_d/: data.txt  run.py
benchmark/paper_fusion_rotated_code/fusion_time_delta_T/: data.txt  run.py
benchmark/paper_fusion_rotated_code/partition_num_single_thread_2_tree/: data.txt  run.py
benchmark/paper_fusion_rotated_code/pymatching_compare_various_T/: README.md  data_blossomV.txt  data_fusion.txt  data_parity.txt  data_pymatching.txt  pymatching_compare_various_T.gp  run_blossomV.py  run_fusion.py  run_parity.py  run_pymatching.py
benchmark/paper_fusion_rotated_code/thread_pool_size_partition_1k/: data.txt  decoding_time_per_defect.gp  fit.py  run.py
benchmark/paper_microblossom/circuit_level_d13/: generate_data.py  results.md  run_parity.py  run_pymatching.py
benchmark/paper_microblossom/circuit_level_d9/: results.md  run_pymatching.py
benchmark/paper_microblossom/circuit_level_d9_intel_xeon_8375C/: results.md  run_parity.py
benchmark/paper_parallel_fusion_blossom/: README.md
benchmark/partition_num/: README.md  average_computation_cpu_seconds.gp  average_decoding_time_per_round.gp  average_decoding_time_per_syndrome.gp  data.txt  process_data.py
benchmark/partition_num_2/: generate_data.sh  run_simulations.sh
benchmark/partition_num_3/: README.md  average_decoding_time_per_round.gp  data.txt  generate_data.sh  process_data.py  run_simulations.sh
benchmark/partition_num_4/: average_decoding_time_per_round.gp  data.txt  generate_data.sh  run_simulations.sh
benchmark/serial_speed/: README.md  average_decoding_time_per_round.gp  average_decoding_time_per_syndrome.gp  data.txt  process_data.py
blossomV/: blossomV.cpp
scripts/: .gitignore  NOTES.md  count_Rust_LOC.py  demo.py  demo_local_render.py  demo_visualizer.py  generate_icon.py  graph_time_partition.py  graph_time_partition.syndromes
src/: blossom_v.rs  bottle.py  cli.rs  complete_graph.rs  dual_module.rs  dual_module_parallel.rs  dual_module_serial.rs  example.rs  example_codes.rs  example_partition.rs  fusion_single_thread.rs  helper.py  lib.rs  main.rs  mwpm_solver.rs  pointers.rs  primal_module.rs  primal_module_distributed.rs  primal_module_parallel.rs  primal_module_serial.rs  union_find.rs  util.rs  visualize.rs
tests/python/: test_demo.py  test_dynamic_weights.py  test_max_tree_size.py
tutorial/: book.toml
tutorial/src/: README.md  SUMMARY.md  developer-notes.md  graph_partitions_and_fusion_plans.md  installation.md  parallel-parameters-config.md  problem-definition.md  problem_definition.md  ref.bib  visualizer_usage.md
visualize/: cmd.js  gui3d.js  index.html  index.js  mocker.js  package-lock.json  package.json  partition-profile.html  patches.js  primal.js  server.py  server.sh  visualizer.json
visualize/data/: NOTE.md  filter_data.py
yqi-art/: README.md  demo-decode.js  demo-simulation.js  fusion-blossom.js  package-lock.json
(+121 files in other folders)
