[package]
name = "fusion-blossom"
version = "0.0.1"
authors = ["Yue Wu <wuyue16pku@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A fast minimum-weight perfect matching solver for quantum error correction"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# to enable a feature, use `--features xxx`
default = []
blossom_v = []  # automatically enabled when file `blossomV/PerfectMatching.h` exists
i32_weight = []  # use i32 instead of i64 as weight type, to be the same as blossom V library

[dependencies]
rand_xoshiro = "0.6.0"
libc = "0.2.124"
cfg-if = "1.0.0"
priority-queue = "1.2.1"
parking_lot = { version = "0.12.0", features = ["hardware-lock-elision"] }
serde = { version = "1.0.117", features = ["derive", "rc"] }
serde_json = "1.0.59"
chrono = "0.4.19"
derivative = "2.2.0"
urlencoding = "2.1.0"

[build-dependencies]
cc = "1.0.66"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
# to run locally: `RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps`
