[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "fusion_blossom"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = ["cffi"]

# by default remove blossom V in the build because of license issue;
# users can enable blossom V by removing `remove_blossom_v` feature, at the responsibility of users
[tool.maturin]
features = ["python_binding", "remove_blossom_v"]
